--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-paper": "^5.10.4",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
